Binary output now can be saved